添加后台管理模块 测试fastdfs连接与上传

--- a/build.gradle
+++ b/build.gradle
@@ -32,8 +32,8 @@ allprojects {
     }
 
     dependencies {
-    implementation 'junit:junit:4.12'
-        implementation 'org.junit.jupiter:junit-jupiter'
+        implementation 'junit:junit:4.12'
+        testCompile group: 'org.junit.jupiter', name: 'junit-jupiter', version: '5.6.0'
     }
 }
 
