--- a/settings.gradle
+++ b/settings.gradle
@@ -5,3 +5,5 @@ include 'mall-service-util'
 include 'mall-web-util'
 include 'mall-user-service'
 include 'mall-user-web'
+include 'mall-manage-web'
+include 'mall-manage-service'
