--- a/mall-user-service/src/main/resources/application.properties
+++ b/mall-user-service/src/main/resources/application.properties
@@ -12,3 +12,6 @@ dubbo.registry.address=192.168.145.30:2181
 dubbo.registry.protocol=zookeeper
 
 dubbo.base-pacakge=com.yuan.user.service.impl
+
+spring.redis.host=192.168.145.30
+spring.redis.port=6379
