--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ allprojects {
         mybatisPlusVersion = '3.2.0'
         lombokVersion = '1.18.10'
         junitVersion = '4.12'
+        jedisVersion = '3.1.0'
     }
 
     repositories {
